--- a/packages/core/i18n/nls.fr.json
+++ b/packages/core/i18n/nls.fr.json
@@ -1,6 +1,9 @@
 {
   "aiConfiguration:open": "Ouvrir la vue Configuration AI",
+  "aiHistory:clear": "Histoire de l'IA : Effacer l'historique",
   "aiHistory:open": "Ouvrir la vue de l'historique de l'IA",
+  "aiHistory:sortChronologically": "Histoire de l'IA : Classer par ordre chronologique",
+  "aiHistory:sortReverseChronologically": "Histoire de l'IA : Trier par ordre chronologique inverse",
   "debug.breakpoint.editCondition": "Edit Condition...",
   "notebook.cell.changeToCode": "Changer la cellule en code",
   "notebook.cell.changeToMarkdown": "Changer la cellule en Mardown",
@@ -208,6 +211,7 @@
       "prepareDownloadLink": "Préparation du lien de téléchargement...",
       "processedOutOf": "Traitement de {0} sur {1}.",
       "replaceTitle": "Remplacer le fichier",
+      "uploadFailed": "Une erreur s'est produite lors du téléchargement d'un fichier. {0}",
       "uploadFiles": "Télécharger des fichiers...",
       "uploadedOutOf": "Téléchargé {0} sur {1}"
     },
