--- a/packages/core/i18n/nls.ru.json
+++ b/packages/core/i18n/nls.ru.json
@@ -1,6 +1,9 @@
 {
   "aiConfiguration:open": "Откройте представление конфигурации AI",
+  "aiHistory:clear": "История ИИ: Чистая история",
   "aiHistory:open": "Откройте представление истории ИИ",
+  "aiHistory:sortChronologically": "История искусственного интеллекта: Сортировка в хронологическом порядке",
+  "aiHistory:sortReverseChronologically": "История искусственного интеллекта: Сортировка в обратном хронологическом порядке",
   "debug.breakpoint.editCondition": "Изменить состояние...",
   "notebook.cell.changeToCode": "Измените ячейку на код",
   "notebook.cell.changeToMarkdown": "Измените ячейку на Мардаун",
@@ -208,6 +211,7 @@
       "prepareDownloadLink": "Подготовка ссылки для скачивания...",
       "processedOutOf": "Обработано {0} из {1}",
       "replaceTitle": "Заменить файл",
+      "uploadFailed": "При загрузке файла произошла ошибка. {0}",
       "uploadFiles": "Загрузить файлы...",
       "uploadedOutOf": "Загружено {0} из {1}"
     },
