fix: warn before starting multiple debug sessions
When a debug session is initiated by the user, and the
`suppressMultipleSessionWarning` is not set to `false` in
the launch config, prompt the user before starting a new
debug session with the same label.

- Introduce `suppressMultipleSessionWarning` prop to the
  debug config.
- Add `startedByUser` prop to the session options.

Closes eclipse-theia/theia#7917

--- a/packages/core/i18n/nls.json
+++ b/packages/core/i18n/nls.json
@@ -129,6 +129,7 @@
       "instruction-breakpoint": "Instruction Breakpoint",
       "instructionBreakpoint": "instruction breakpoint",
       "missingConfiguration": "Dynamic configuration '{0}:{1}' is missing or not applicable",
+      "multipleSession": "'{0}' is already running. Do you want to start another instance?",
       "pause": "pause",
       "pauseAll": "Pause All",
       "reveal": "Reveal",
@@ -540,7 +541,7 @@
     },
     "vsx-registry": {
       "confirmDialogMessage": "The extension \"{0}\" is unverified and might pose a security risk.",
-      "confirmDialogTitle": "Are you sure you want to proceed with the installation ?",
+      "confirmDialogTitle": "Are you sure you want to proceed with the installation?",
       "downloadCount": "Download count: {0}",
       "errorFetching": "Error fetching extensions.",
       "errorFetchingConfigurationHint": "This could be caused by network configuration issues.",
